UIMA-1986 Changed how a critical region is synchronized in StackDumpTimer. Removed synchronization on a Long and replaced it with synchronization on an Object instance.
git-svn-id: https://svn.apache.org/repos/asf/uima/uima-as/trunk@1055140 13f79535-47bb-0310-9956-ffa450edef68